--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html>
 
 <head>
+    ‹title›Grids</title>
+    ‹meta charset="utf-8"›
+    ‹meta name="viewport" content="width=device-width,'
+    initial-scale=1"›
+    <link rel-"stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.
+    1/css/bootstrap.mn.css>
+    12
+    src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.
+    1/jquery.min.js"*/script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.
+    1/js/bootstrap.min.js">/script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>replit</title>
@@ -16,7 +28,18 @@
     ‹meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.
                 1/css/bootstrap.min.css" › <script 10 src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.
-                1/jquery-min.js" </script>
+                1/‹title›Grid Example</title>
+                ‹meta charset="utf-8"›
+                ‹meta name="viewport" content="width=device-width,'
+                initial-scale=1"›
+                <link rel-"stylesheet"
+                href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.
+                1/css/bootstrap.mn.css>
+                12
+                src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.
+                1/jquery.min.js"*/script>
+                <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.
+                1/js/bootstrap.min.js">/script>jquery-min.js" </script>
     ‹script
     src= "https://maxcdn.bootstrapcdn.com/bootstrap/3.4.
     1/js/bootstrap.min.js"></script>
