--- a/index.html
+++ b/index.html
@@ -6,39 +6,38 @@
     ‹meta charset="utf-8"›
     ‹meta name="viewport" content="width=device-width,'
     initial-scale=1"›
-    <link rel-"stylesheet"
-    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.
+    <link rel-"stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.
     1/css/bootstrap.mn.css>
     12
-    src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.
-    1/jquery.min.js"*/script>
+    src=" https://ajax.googleapis.com/ajax/libs/jquery/3.4. 1/jquery.min.js"*/script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.
     1/js/bootstrap.min.js">/script>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>replit</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+            < meta charset = "utf-8" >
+                <meta name="viewport" content="width=device-width">
+                    <title>replit</title>
+                    <link href="style.css" rel="stylesheet" type="text/css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
-    ‹title›Grid Example‹/title›
-    ‹meta charset="utf-8"›
-    6
+                    <link rel="preconnect" href="https://fonts.googleapis.com">
+                        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+                            <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
+                                ‹title›Grid Example‹/title›
+                                ‹meta charset="utf-8"›
+
+                                6
     ‹meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.
+                                <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.
                 1/css/bootstrap.min.css" › <script 10 src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.
-                1/‹title›Grid Example</title>
+                                1/‹title›Grid Example</title>
                 ‹meta charset="utf-8"›
-                ‹meta name="viewport" content="width=device-width,'
-                initial-scale=1"›
-                <link rel-"stylesheet"
-                href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.
+                            ‹meta name="viewport" content="width=device-width,'
+                            initial-scale=1"›
+                            <link rel-"stylesheet"
+                            href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.
                 1/css/bootstrap.mn.css>
-                12
-                src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.
+                            12
+                            src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.
                 1/jquery.min.js"*/script>
-                <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.
+                            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.
                 1/js/bootstrap.min.js">/script>jquery-min.js" </script>
     ‹script
     src= "https://maxcdn.bootstrapcdn.com/bootstrap/3.4.
@@ -47,7 +46,7 @@
 
 <body>
     <h1 style="color: orange;" id="title"><b>Sports</b></h1>
-    <div class="Topclass">
+    <div class="container">
         <a class="active" href="#Home">Home</a>
         <br>
         <a href="#Home">About Us</a>
@@ -66,9 +65,12 @@
     <p id="P2">Hockey is a term used to denote a family of various types of both summer and winter team sports which
         originated on either an outdoor field, sheet of ice, or dry floor such as in a gymnasium.</p>
     <h3 class="Cricket">Cricket</h3>
-    <p id="P3"><mark>Cricket</mark> is a bat-and-ball game that is played between two teams of <code>eleven players</code> on a field, at the
-        centre of which is a <abbr>22-yard pitch</abbr> with a wicket at each end, each comprising <blockquote>bails balanced on three
-        stumps.</blockquote></p>
+    <p id="P3"><mark>Cricket</mark> is a bat-and-ball game that is played between two teams of
+        <code>eleven players</code> on a field, at the
+        centre of which is a <abbr>22-yard pitch</abbr> with a wicket at each end, each comprising
+    <blockquote>bails balanced on three
+        stumps.</blockquote>
+    </p>
     <h3 class="Tennis">Tennis</h3>
     <p id="P4">Tennis is a racket sport that is played either individually against a single opponent or between two
         teams of two players each. Each player uses a tennis racket strung with a cord to strike a hollow rubber ball
@@ -100,7 +102,11 @@
     <div class="absolute">Absolute</div>
     <div class="static">Static</div>
     <html lang="en" › < head>
-
-</body>
+    <div id="mycarousel" class="carousel slide" data-ride="carousel" ‹ol class=carousel-indicators  ‹li
+        data-target-"#myCarousel" data-slide-to="@" class="active">
+        </¡>|
+        ‹li data-target="#myCarousel" data-slide-to="1"></li>|
+        ‹li data-target-"#myCarousel" data-slide-to="2"></li> |
+        </ol>
 
 </html>
