--- a/index.html
+++ b/index.html
@@ -2,114 +2,199 @@
 <html>
 
 <head>
-    ‹title›Grids</title>
-    ‹meta charset="utf-8"›
-    ‹meta name="viewport" content="width=device-width,'
-    initial-scale=1"›
-    <link rel-"stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.
-    1/css/bootstrap.mn.css>
-    12
-    src=" https://ajax.googleapis.com/ajax/libs/jquery/3.4. 1/jquery.min.js"*/script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.
-    1/js/bootstrap.min.js">/script>
-            < meta charset = "utf-8" >
-                <meta name="viewport" content="width=device-width">
-                    <title>replit</title>
-                    <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>My Website</title>
 
-                    <link rel="preconnect" href="https://fonts.googleapis.com">
-                        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-                            <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
-                                ‹title›Grid Example‹/title›
-                                ‹meta charset="utf-8"›
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>replit</title>
 
-                                6
-    ‹meta name="viewport" content="width=device-width, initial-scale=1">
-                                <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.
-                1/css/bootstrap.min.css" › <script 10 src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.
-                                1/‹title›Grid Example</title>
-                ‹meta charset="utf-8"›
-                            ‹meta name="viewport" content="width=device-width,'
-                            initial-scale=1"›
-                            <link rel-"stylesheet"
-                            href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.
-                1/css/bootstrap.mn.css>
-                            12
-                            src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.
-                1/jquery.min.js"*/script>
-                            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.
-                1/js/bootstrap.min.js">/script>jquery-min.js" </script>
-    ‹script
-    src= "https://maxcdn.bootstrapcdn.com/bootstrap/3.4.
-    1/js/bootstrap.min.js"></script>
-    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+
 </head>
 
 
 <body>
-    <h1 style="color: orange;" id="title"><b>Sports</b></h1>
-    <div class="container">
-        <a class="active" href="#Home">Home</a>
-        <br>
-        <a href="#Home">About Us</a>
-        <br>
-        <a href="#Home">Contact Us</a>
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <a href="#" style="color: orange;" id="title" class="navbar-brand">Sports</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <!-- Icons for larger screens (shown only on md and up) -->
+                <li class="nav-item d-none d-md-block">
+                    <a class="nav-link" href="#Home">
+                        <i class="fas fa-home"></i>
+                    </a>
+                </li>
+                <li class="nav-item d-none d-md-block">
+                    <a class="nav-link" href="#AboutUs">
+                        <i class="fas fa-info-circle"></i>
+                    </a>
+                </li>
+                <li class="nav-item d-none d-md-block">
+                    <a class="nav-link" href="#ContactUs">
+                        <i class="fas fa-envelope"></i>
+                    </a>
+                </li>
+
+                <!-- Text for smaller screens (shown only below md) -->
+                <li class="nav-item d-md-none">
+                    <a class="nav-link" href="#Home">Home</a>
+                </li>
+                <li class="nav-item d-md-none">
+                    <a class="nav-link" href="#AboutUs">About Us</a>
+                </li>
+                <li class="nav-item d-md-none">
+                    <a class="nav-link" href="#ContactUs">Contact Us</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <br> <br>
+    <div class="carousel slide" id="myCarousel" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" class="active" data-slide-to="0"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="item active">
+                <img class="carousel-item" src="Soccer.jpeg" width="100%" height="300px">
+            </div>
+            <div class="item">
+                <img class="carousel-item" src="Vollyball.jpeg" width="100%" height="300px">
+            </div>
+            <div class="item">
+                <img class="carousel-item" src="Tennis.jpeg" width="100%" height="300px">
+            </div>
+            <div class="item">
+                <img class="item" src="Cricket.jpeg" width="100%" height="300px">
+            </div>
+        </div>
+        <a href="" class="left carousel-control-prev" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a href="" class="right carousel-control-next" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+            <span class="sr-only">Next</span>
+        </a>
         
-        <br>
+
     </div>
-    <p id="imgfloat"> <img src="Sports.jpeg" id="imgfloat1" style="width: 200px; height: 100px;" />
-        <img src="Sports 1.jpeg" id="imgfloat2" style="width: 200px; height: 100px;" />
-    </p>
-    <br> <br> <br> <br> <br> <br>
-    <h3 id="Soccer">Soccer</h3>
-    <p id="P1">Association football, more commonly known as football or soccer, is a team sport played between two teams
-        of 11 players each, who primarily use their feet to propel a ball around a rectangular field called a pitch.</p>
-    <h3 class="Hockey">Hockey</h3>
-    <p id="P2">Hockey is a term used to denote a family of various types of both summer and winter team sports which
-        originated on either an outdoor field, sheet of ice, or dry floor such as in a gymnasium.</p>
-    <h3 class="Cricket">Cricket</h3>
-    <p id="P3"><mark>Cricket</mark> is a bat-and-ball game that is played between two teams of
-        <code>eleven players</code> on a field, at the
-        centre of which is a <abbr>22-yard pitch</abbr> with a wicket at each end, each comprising
-    <blockquote>bails balanced on three
-        stumps.</blockquote>
-    </p>
-    <h3 class="Tennis">Tennis</h3>
-    <p id="P4">Tennis is a racket sport that is played either individually against a single opponent or between two
-        teams of two players each. Each player uses a tennis racket strung with a cord to strike a hollow rubber ball
-        covered with felt over or around a net and into the opponent's court.</p>
-    <h3 class="Badmington">Badmington</h3>
-    <p id="P5">Badminton is a racquet sport played using racquets to hit a shuttlecock across a net. Although it may be
-        played with larger teams, the most common forms of the game are "singles" and "doubles".</p>
-    <h3 class="Netball">Netball</h3>
-    <p id="P6">Netball is a ball sport played on a rectangular court by two teams of seven players. The primary
-        objective is to shoot a ball through the defender's goal ring while preventing the opposing team from shooting
-        through their own goal ring.</p>
-    <h3 class="Vollyball">Vollyball</h3>
-    <p id="P7">Volleyball is a team sport in which two teams of six players are separated by a net. Each team tries to
-        score points by grounding a ball on the other team's court under organized rules. It has been a part of the
-        official program of the Summer Olympic Games since Tokyo 1964.</p>
-    <h3 class="Basketball">Basketball</h3>
-    <p id="P8">Basketball is a team sport in which two teams, most commonly of five players each, opposing one another
-        on a rectangular court, compete with the primary objective of shooting a basketball through the defender's hoop,
-        while preventing the opposing team from shooting through their own hoop.</p>
-    <h3 class="Baseball">Baseball</h3>
-    <p id="P9">Baseball is a bat-and-ball sport played between two teams of nine players each, taking turns batting and
-        fielding. The game occurs over the course of several plays, with each play generally beginning when a player on
-        the fielding team, called the pitcher, throws a ball that a player on the batting team, called the batter, tries
-        to hit with a bat.</p>
+    <div class="container">
+        <div class="spinner-border text-primary">
+            <div class="sr-only">Loading</div>
+        </div>
+        <div class="spinner-border text-secondary">
+            <div class="sr-only">Loading</div>
+        </div>
+        <div class="spinner-border text-danger">
+            <div class="sr-only">Loading</div>
+        </div>
+        <div class="spinner-border text-warning">
+            <div class="sr-only">Loading</div>
+        </div>
+        <div class="spinner-border text-dark">
+            <div class="sr-only">Loading</div>
+        </div>
+        <div class="spinner-border text-light">
+            <div class="sr-only">Loading</div>
+        </div>
+        <div class="spinner-border text-success">
+            <div class="sr-only">Loading</div>
+        </div>
+        <div class="spinner-border text-info">
+            <div class="sr-only">Loading</div>
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="container">
+        <p id="imgfloat">
+            <img src="Sports.jpeg" id="imgfloat1" style="width: 200px; height: 100px;" />
+            <img src="Sports 1.jpeg" id="imgfloat2" style="width: 200px; height: 100px;" />
+        </p>
+        <br> <br> <br> <br> <br> <br>
+        <h3 id="Soccer">Soccer</h3>
+        <p id="P1">
+            Association football, more commonly known as football or soccer, is a team sport played between two
+            teams
+            of 11 players each, who primarily use their feet to propel a ball around a rectangular field called a pitch.
+        </p>
+        <h3 class="Hockey">Hockey</h3>
+        <p id="P2">
+            Hockey is a term used to denote a family of various types of both summer and winter team sports which
+            originated on either an outdoor field, sheet of ice, or dry floor such as in a gymnasium.
+        </p>
+        <h3 class="Cricket">Cricket</h3>
+        <p id="P3">
+            <mark>Cricket</mark>
+            is a bat-and-ball game that is played between two teams of
+            <code>eleven players</code>
+            on a field, at the
+            centre of which is a <abbr>22-yard pitch</abbr> with a wicket at each end, each comprising
+            bails balanced on three stumps.
+        </p>
+        <h3 class="Tennis">Tennis</h3>
+        <p id="P4">
+            Tennis is a racket sport that is played either individually against a single opponent or between two
+            teams of two players each. Each player uses a tennis racket strung with a cord to strike a hollow rubber
+            ball
+            covered with felt over or around a net and into the opponent's court.
+        </p>
+        <h3 class="Badmington">Badmington</h3>
+        <p id="P5">Badminton is a racquet sport played using racquets to hit a shuttlecock across a net. Although it may
+            be
+            played with larger teams, the most common forms of the game are "singles" and "doubles".</p>
+        <h3 class="Netball">Netball</h3>
+        <p id="P6">Netball is a ball sport played on a rectangular court by two teams of seven players. The primary
+            objective is to shoot a ball through the defender's goal ring while preventing the opposing team from
+            shooting
+            through their own goal ring.</p>
+        <h3 class="Vollyball">Vollyball</h3>
+        <p id="P7">Volleyball is a team sport in which two teams of six players are separated by a net. Each team tries
+            to
+            score points by grounding a ball on the other team's court under organized rules. It has been a part of the
+            official program of the Summer Olympic Games since Tokyo 1964.</p>
+        <h3 class="Basketball">Basketball</h3>
+        <p id="P8">Basketball is a team sport in which two teams, most commonly of five players each, opposing one
+            another
+            on a rectangular court, compete with the primary objective of shooting a basketball through the defender's
+            hoop,
+            while preventing the opposing team from shooting through their own hoop.</p>
+        <h3 class="Baseball">Baseball</h3>
+        <p id="P9">Baseball is a bat-and-ball sport played between two teams of nine players each, taking turns batting
+            and
+            fielding. The game occurs over the course of several plays, with each play generally beginning when a player
+            on
+            the fielding team, called the pitcher, throws a ball that a player on the batting team, called the batter,
+            tries
+            to hit with a bat.</p>
+    </div>
     <h2>Positions</h2>
     <p>An element with position: relative is positioned relative to its normal position</p>
-    <div class="relative">Relative</div>
+    <!--<div class="relative">Relative</div>
     <div class="fixed"> Fixed</div>
     <div class="absolute">Absolute</div>
-    <div class="static">Static</div>
-    <html lang="en" › < head>
-    <div id="mycarousel" class="carousel slide" data-ride="carousel" ‹ol class=carousel-indicators  ‹li
+    <div class="static">Static</div>-->
+    <!--<div id="mycarousel" class="carousel slide" data-ride="carousel" ‹ol class=carousel-indicators ‹li
         data-target-"#myCarousel" data-slide-to="@" class="active">
-        </¡>|
+        </i>|
         ‹li data-target="#myCarousel" data-slide-to="1"></li>|
         ‹li data-target-"#myCarousel" data-slide-to="2"></li> |
         </ol>
+    </div>-->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</body>
 
 </html>
