--- a/index.html
+++ b/index.html
@@ -60,29 +60,27 @@
             <li data-target="#myCarousel" data-slide-to="3"></li>
         </ol>
         <div class="carousel-inner">
-            <div class="item active">
-                <img class="carousel-item" src="Soccer.jpeg" width="100%" height="300px">
+            <div class="carousel-item active">
+                <img src="Soccer.jpeg" width="100%" height="300px">
             </div>
-            <div class="item">
-                <img class="carousel-item" src="Vollyball.jpeg" width="100%" height="300px">
+            <div class="carousel-item">
+                <img src="Vollyball.jpeg" width="100%" height="300px">
             </div>
-            <div class="item">
-                <img class="carousel-item" src="Tennis.jpeg" width="100%" height="300px">
+            <div class="carousel-item">
+                <img src="Tennis.jpeg" width="100%" height="300px">
             </div>
-            <div class="item">
-                <img class="item" src="Cricket.jpeg" width="100%" height="300px">
+            <div class="carousel-item">
+                <img src="Cricket.jpeg" width="100%" height="300px">
             </div>
         </div>
-        <a href="" class="left carousel-control-prev" data-slide="prev">
+        <a href="#myCarousel" class="carousel-control-prev" data-slide="prev">
             <span class="carousel-control-prev-icon"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a href="" class="right carousel-control-next" data-slide="next">
+        <a href="#myCarousel" class="carousel-control-next" data-slide="next">
             <span class="carousel-control-next-icon"></span>
             <span class="sr-only">Next</span>
         </a>
-
-
     </div>
     <div class="container">
         <div class="spinner-border text-primary">
